--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/">
+  <base href="/suprimpoudel.com.io/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -106,7 +106,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2764769812';
+    var serviceWorkerVersion = '1534551463';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
